feat: registered service worker

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,10 @@
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Your optimized Pull Requests dashboard" />
+		<meta
+			name="description"
+			content="Your optimized Pull Requests dashboard"
+		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/femalecodertocat.png" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
@@ -39,6 +42,5 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-	</body>
+    --></body>
 </html>
